ingress/ingress.yaml
# Ingress nginx para acessar o front e backend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    # endereço de acesso para a aplicação
    - host: app.local
      http:
        paths:
          # acesso para o frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-app
                port:
                  number: 80
          # acesso para o backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-app
                port:
                  number: 5000
